--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -35,7 +35,15 @@ data <- read.csv(file="https://onlinestatbook.com/case_studies_rvls/physical_str
 
 ### scatterplot
 
+```{r}
+plot(SIMS~ARM,data=data)
+model1=lm(SIMS~ARM, data=data)
+abline(model1)
+```
+
+
 ### Numerical results
+
 
 
 ### Inferential  (Build model.1)
