--- a/WUP_LinModNew.Rmd
+++ b/WUP_LinModNew.Rmd
@@ -108,17 +108,29 @@ This shows that ARM=88, GRIP=94, the predicted SIMS score is 0.54. At that score
 #### now add the model fit to our plot for model.2
   
 
-
 ## Model 3 SIM~ARM+GRIP
+
+```{r}
+model.3 = lm(SIMS~ARM+GRIP, data=data)
+summary(model.3)
+```
+Both ARM and GRIP are significantly different from 0 because they are both less than 0.05.
 
 ### Numerical results (cor)
 
-`
+```{r}
+cor(data)
+```
+What this shows is that SIMS correlates with GRIP and ARM values.
   
 ### Inferential  (Build 2-dimentional model.3)
 
 #### predict model.3 at target point
-  
+
+```{r}
+predict(model.3, targtPoint,interval='prediction')
+```
+This shows that ARM=88, GRIP=94, the predicted SIMS score is 0.15. At that score the 95% confidence interval is SIMS between -2.13 and 2.43.
 
 ## Comparing nested models ANOVA Test
 
@@ -127,3 +139,14 @@ This shows that ARM=88, GRIP=94, the predicted SIMS score is 0.54. At that score
 
 ## Informally compare Model.1 with model.2
 
+```{r}
+anova_result <- anova(model.1, model.3)
+print(anova_result)
+```
+Model 2 is better than model 1 because the p-value for comparison is less than 0.05.
+
+```{r}
+anova_result <- anova(model.2, model.3)
+print(anova_result)
+```
+The p-value of the comparison of model.2 and model.3 is 0.000000001495 which is less than 0.05, this means that the models are different and model.3 is better.
